@@ -1,5 +1,5 @@
 # This file is part of libmicrohttpd.
-# (C) 2006, 2007, 2008, 2009 Christian Grothoff (and other contributing authors)
+# (C) 2006, 2007, 2008, 2009, 2010 Christian Grothoff (and other contributing authors)
 #
 # libmicrohttpd is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published
